--- a/front/src/app/welcome/welcome.component.html
+++ b/front/src/app/welcome/welcome.component.html
@@ -5,10 +5,10 @@
 
         <div class="mt-4">
             <button class="btn btn-primary btn-round btn-lg" routerLink="/connexion">
-                <i class="ion ion-log-in pr-3"></i>Connexion
+                <i class="ion ion-log-in pr-2"></i>Connexion
             </button>
             <button class="btn btn-primary btn-round btn-lg" routerLink="/inscription">
-                <i class="ion ion-log-in pr-3"></i>Inscription
+                <i class="ion ion-person-add pr-2"></i>Inscription
             </button>
         </div>
     </div>
