--- a/front/src/app/machines/machines.component.html
+++ b/front/src/app/machines/machines.component.html
@@ -61,7 +61,7 @@
 
         <div class="row">
             <div class="col-md-12 pt-2 pb-2 btnBottomRight">
-                <button md-fab class="pull-right bg-primary" (click)="openMachineFormDialog()"
+                <button md-fab class="pull-right bg-secondary" (click)="openMachineFormDialog()"
                         mdTooltip="Ajouter une machine"
                         [mdTooltipPosition]="'right'">
                     <i class="ion-plus addIcon"></i>
