--- a/front/src/app/profile/profile.component.html
+++ b/front/src/app/profile/profile.component.html
@@ -30,7 +30,7 @@
     </div>
     <div class="row">
         <div class="col-md-12 pt-2 pb-2 btnBottomRight">
-            <button md-fab class="pull-right bg-primary" (click)="openDialogEditMember()">
+            <button md-fab class="pull-right bg-secondary" (click)="openDialogEditMember()">
                 <i class="ion-edit edit"></i>
             </button>
         </div>
