--- a/front/src/app/members/members.component.html
+++ b/front/src/app/members/members.component.html
@@ -83,7 +83,7 @@
 
         <div class="row">
             <div class="col-md-12 pt-2 pb-2 btnBottomRight">
-                <button md-fab class="pull-right bg-primary" mdTooltip="Ajouter un adhérent"
+                <button md-fab class="pull-right bg-secondary" mdTooltip="Ajouter un adhérent"
                         [mdTooltipPosition]="'right'">
                     <i class="ion-person-add addIcon"></i>
                 </button>
