--- a/front/src/app/signup/signup.component.css
+++ b/front/src/app/signup/signup.component.css
@@ -9,4 +9,8 @@
 .blured {
   opacity: 0.75; }
 
+.pull-down {
+  bottom: 0;
+  position: absolute; }
+
 /*# sourceMappingURL=signup.component.css.map */
