--- a/front/src/app/machines/machines.component.html
+++ b/front/src/app/machines/machines.component.html
@@ -50,6 +50,7 @@
                         <div class="col-md-6">
                             <button class="ion ion-trash-b pointer bg-primary" md-mini-fab
                                     mdTooltip="Supprimer cette machine"
+                                    (click)="openDeleteDialog(machine)"
                                     [mdTooltipPosition]="'right'">
                             </button>
                         </div>
