--- a/front/src/app/machines/machines.component.html
+++ b/front/src/app/machines/machines.component.html
@@ -33,6 +33,7 @@
             <thead>
             <tr>
                 <th class="text-white text-center text-light-weight text-uppercase">Nom</th>
+                <th class="text-white text-center text-light-weight text-uppercase"></th>
             </tr>
             </thead>
             <tbody *ngFor="let machine of machines | filterMachines: filterArgs">
