--- a/front/src/app/members/members.component.html
+++ b/front/src/app/members/members.component.html
@@ -38,6 +38,7 @@
                 <th class="text-white text-center text-light-weight text-uppercase">Email</th>
                 <th class="text-white text-center text-light-weight text-uppercase">Date de naissance</th>
                 <th class="text-white text-center text-light-weight text-uppercase">Objectif</th>
+                <th class="text-white text-center text-light-weight text-uppercase"></th>
             </tr>
             </thead>
             <tbody *ngFor="let member of members | filterMembers: filterArgs">
