--- a/front/src/assets/style/custom.scss
+++ b/front/src/assets/style/custom.scss
@@ -8,6 +8,10 @@ body {
   padding-top: 4.5rem;
 }
 
+html, body {
+  height: 100%;
+}
+
 .bg-primary-color {
   background-color: $primary-color !important;
   a {
