--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -5,6 +5,11 @@ body {
   font-size: 16px;
 }
 
+#holder {
+  min-height: 100%;
+  position: relative;
+}
+
 .navbar {
   flex-direction: row;
   -webkit-flex-direction: row;
@@ -15,9 +20,13 @@ body {
 }
 
 .footer {
+  z-index: -1;
   margin-top: 1rem;
   height: 3.75rem;
   border-top: 1px solid $divider-color;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
   .v-center {
     display: flex;
     align-items: center;
@@ -29,4 +38,8 @@ body {
     font-size: 1.4rem;
     color: $primary-text;
   }
+}
+
+.pb-footer {
+  padding-bottom: 3.75rem;
 }
