--- a/front/src/app/program/exercise-preview/exercise-preview.component.html
+++ b/front/src/app/program/exercise-preview/exercise-preview.component.html
@@ -1,21 +1,5 @@
 <div class="row" md-line>
-    <div class="col-md-1 col-12 text-center mr-md-1" [ngSwitch]="exercisesGroupRawCode">
-        <img *ngSwitchCase="bodybuildingExerciseEnumLabel"
-             src="../../assets/img/exercise-types/strength-64.png"
-             class="rounded" alt="Type">
-        <img *ngSwitchCase="cardioExerciseEnumLabel"
-             src="../../assets/img/exercise-types/cardiogram-64.png"
-             class="rounded" alt="Type">
-        <img *ngSwitchCase="trainingExerciseEnumLabel"
-             src="../../assets/img/exercise-types/cardiogram-64.png"
-             class="rounded" alt="Type">
-        <img *ngSwitchCase="organizedExerciseEnumLabel"
-             src="../../assets/img/exercise-types/music-player-64.png"
-             class="rounded" alt="Type">
-        <img *ngSwitchCase="stretchingExerciseEnumLabel"
-             src="../../assets/img/exercise-types/dressing-room-64.png"
-             class="rounded" alt="Type">
-    </div>
+    <pulpe-exercises-type-img [exerciseTypeEnumLabel]="exercisesGroupRawCode"></pulpe-exercises-type-img>
 
     <div class="col-md-10">
         <h4 class="exerciseTitle">{{exercise.name}}
